--- a/index.html
+++ b/index.html
@@ -147,6 +147,37 @@
         </ul>
     </div>
 </section>
+<section>
+    <div>
+        <h2>Постоянные клиенты</h2>
+        <ul>
+
+            <li>
+                <img src="./image/Client 1.svg">
+            </li>
+
+            <li>
+                <img src="./image/Client 2.svg">
+            </li>
+
+            <li>
+                <img src="./image/Client 3.svg">
+            </li>
+            
+            <li>
+                <img src="./image/Client 4.svg">
+            </li>
+
+            <li>
+                <img src="./image/Client 5.svg">
+            </li>
+
+            <li>
+                <img src="./image/Client 6.svg">
+            </li>
+        </ul>
+    </div>
+</section>
 </main>
 
 <!-- footer -->
