--- a/portfolio.html
+++ b/portfolio.html
@@ -41,7 +41,7 @@
 </header>
 
 <!-- main -->
-<main class="main">
+<main>
     <section class="button-section">
         <h1 class="visually-hidden">portfolio</h1>
         <!-- Buttons -->
@@ -66,7 +66,7 @@
         </div>
     </section>
         <!-- Job -->
-        <section>
+        <section class="job-section">
         <div class="container">
             <ul class="job-list list">
             
