--- a/index.html
+++ b/index.html
@@ -158,32 +158,32 @@
         </ul>
     </div>
 </section>
-<section>
+<section class="clients-block">
     <div class="container">
-        <h2>Постоянные клиенты</h2>
-        <ul>
+        <h2 class="clients">Постоянные клиенты</h2>
+        <ul class="clients-logo list">
 
-            <li>
+            <li class="item">
                 <img src="./image/Client 1.svg">
             </li>
 
-            <li>
+            <li class="item">
                 <img src="./image/Client 2.svg">
             </li>
 
-            <li>
+            <li class="item">
                 <img src="./image/Client 3.svg">
             </li>
             
-            <li>
+            <li class="item">
                 <img src="./image/Client 4.svg">
             </li>
 
-            <li>
+            <li class="item">
                 <img src="./image/Client 5.svg">
             </li>
 
-            <li>
+            <li class="item">
                 <img src="./image/Client 6.svg">
             </li>
         </ul>
