--- a/index.html
+++ b/index.html
@@ -35,11 +35,17 @@
         <ul class="auth-nav list">
 
             <li class="item">
-                <a class="header-number-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <a class="header-number-link link" href="mailto:info@devstudio.com">
+                <svg class="num-email-icon" width="16" height="12">
+                    <use href="./image/icons.svg/sprite.svg#icon-envelope"></use>
+                </svg> info@devstudio.com</a>
             </li>
 
             <li class="item">
-                <a class="header-number-link link" href="tel:+380961111111">+380961111111</a>
+                <a class="header-number-link link" href="tel:+380961111111">
+                <svg class="num-email-icon" width="10" height="16">
+                    <use href="./image/icons.svg/sprite.svg#icon-smartphone"></use>
+                </svg>+380961111111</a>
             </li>
 
         </ul>
