--- a/portfolio.html
+++ b/portfolio.html
@@ -33,8 +33,16 @@
         </ul>
         <!-- main gmail and number -->
         <ul class="auth-nav list">
-            <li class="item"><a class="header-number-link link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li class="item"><a class="header-number-link link" href="tel:+380961111111">+380961111111</a></li>
+            <li class="item">
+                <a class="header-number-link link" href="mailto:info@devstudio.com"><svg class="num-email-icon" width="16" height="12">
+                    <use href="./image/icons.svg/sprite.svg#icon-envelope"></use>
+                </svg>info@devstudio.com</a>
+            </li>
+            <li class="item">
+                <a class="header-number-link link" href="tel:+380961111111"><svg class="num-email-icon" width="10" height="16">
+                    <use href="./image/icons.svg/sprite.svg#icon-smartphone"></use>
+                </svg>+380961111111</a>
+            </li>
         </ul>
     </nav>
 </div>
