--- a/index.html
+++ b/index.html
@@ -314,25 +314,55 @@
 </section>
 <section class="clients-block">
     <div class="container">
-        <h2 class="clients">Постоянные клиенты</h2>
-        <ul class="clients-logo list">
+        <h2 class="our-clients">Постоянные клиенты</h2>
+        <ul class="clients list">
 
-            <li class="item">
+            <li class="clients-item">
+                <a class="clients-link" href="">
+                    <svg class="clients-icon" wight="106" height="60">
+                        <use href="./image/icons.svg/sprite.svg#icon-logo-1"></use>
+                    </svg>
+                </a>
             </li>
 
-            <li class="item">
+            <li class="clients-item">
+                <a class="clients-link" href="">
+                    <svg class="clients-icon" wight="106" height="60">
+                        <use href="./image/icons.svg/sprite.svg#icon-logo-2"></use>
+                    </svg>
+                </a>
             </li>
 
-            <li class="item">
+            <li class="clients-item">
+                <a class="clients-link" href="">
+                    <svg class="clients-icon" wight="106" height="60">
+                        <use href="./image/icons.svg/sprite.svg#icon-logo-3"></use>
+                    </svg>
+                </a>
             </li>
             
-            <li class="item">
+            <li class="clients-item">
+                <a class="clients-link" href="">
+                    <svg class="clients-icon" wight="106" height="60">
+                        <use href="./image/icons.svg/sprite.svg#icon-logo-4"></use>
+                    </svg>
+                </a>
             </li>
 
-            <li class="item">
+            <li class="clients-item">
+                <a class="clients-link" href="">
+                    <svg class="clients-icon" wight="106" height="60">
+                        <use href="./image/icons.svg/sprite.svg#icon-logo-5"></use>
+                    </svg>
+                </a>
             </li>
 
-            <li class="item">
+            <li class="clients-item">
+                <a class="clients-link" href="">
+                    <svg class="clients-icon" wight="106" height="60">
+                        <use href="./image/icons.svg/sprite.svg#icon-logo-6"></use>
+                    </svg>
+                </a>
             </li>
         </ul>
     </div>
