--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
 
 <!-- footer -->
 <footer class="footer">
-    <div class="container">
+    <div class="container flex">
         <div>
             <a class="studio-footer link" href=""><span class="web-footer link">Web</span>Studio</a>
             
