--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
                 </address>
             </div>
             <div class="div-item">
-                <h3 class="join">ПРИСОЕДИНЯЙТЕСЬ</h3>
+                <p class="join">присоединяйтесь</p>
                 <ul class="join-list list">
 
                     <li class="join-item">
