--- a/portfolio.html
+++ b/portfolio.html
@@ -78,8 +78,8 @@
                 <ul class="job-list list">
 
                     <li class="job-item grid-item">
-                        <a class="shadow-hover">
-                            <img width="370" src="./image/box-1.jpg" alt="" />
+                        <a class="shadow-hover link" href="">
+                            <img width="370" src="./image/box-1.jpg" alt="Технокряк" />
                             <div class="job-sites">
                                 <h2 class="job">Технокряк</h2>
                                 <p class="sites">Веб-сайт</p>
@@ -88,8 +88,8 @@
                     </li>
 
                     <li class="job-item grid-item">
-                        <a class="shadow-hover">
-                            <img width="370" src="./image/box-2.jpg" alt="" />
+                        <a class="shadow-hover link" href="">
+                            <img width="370" src="./image/box-2.jpg" alt="Постер New Orlean vs Golden Star" />
                             <div class="job-sites">
                                 <h2 class="job">Постер New Orlean vs Golden Star</h2>
                                 <p class="sites">Дизайн</p>
@@ -98,8 +98,8 @@
                     </li>
 
                     <li class="job-item grid-item">
-                        <a class="shadow-hover">
-                            <img width="370" src="./image/box-3.jpg" alt="" />
+                        <a class="shadow-hover link" href="">
+                            <img width="370" src="./image/box-3.jpg" alt="Ресторан Seafood" />
                             <div class="job-sites">
                                 <h2 class="job">Ресторан Seafood</h2>
                                 <p class="sites">Приложение</p>
@@ -108,8 +108,8 @@
                     </li>
                 
                     <li class="job-item grid-item">
-                        <a class="shadow-hover">
-                            <img width="370" src="./image/box-4.jpg" alt="" />
+                        <a class="shadow-hover link" href="">
+                            <img width="370" src="./image/box-4.jpg" alt="Проект Prime" />
                             <div class="job-sites">
                                 <h2 class="job">Проект Prime</h2>
                                 <p class="sites">Маркетинг</p>
@@ -118,8 +118,8 @@
                     </li>
 
                     <li class="job-item grid-item">
-                        <a class="shadow-hover">
-                            <img width="370" src="./image/box-5.jpg" alt="" />
+                        <a class="shadow-hover link" href="">
+                            <img width="370" src="./image/box-5.jpg" alt="Проект Boxes" />
                             <div class="job-sites">
                                 <h2 class="job">Проект Boxes</h2>
                                 <p class="sites">Приложения</p>
@@ -128,8 +128,8 @@
                     </li>
 
                     <li class="job-item grid-item">
-                        <a class="shadow-hover">
-                            <img width="370" src="./image/box-6.jpg" alt="" />
+                        <a class="shadow-hover link" href="">
+                            <img width="370" src="./image/box-6.jpg" alt="Inspiration has no Borders" />
                             <div class="job-sites">
                                 <h2 class="job">Inspiration has no Borders</h2>
                                 <p class="sites">Веб-сайт</p>
@@ -138,8 +138,8 @@
                     </li>
 
                     <li class="job-item grid-item">
-                        <a class="shadow-hover">
-                            <img width="370" src="./image/box-7.jpg" alt="" />
+                        <a class="shadow-hover link" href="">
+                            <img width="370" src="./image/box-7.jpg" alt="Издание Limited Edition" />
                             <div class="job-sites">
                                 <h2 class="job">Издание Limited Edition</h2>
                                 <p class="sites">Дизайн</p>
@@ -148,8 +148,8 @@
                     </li>
 
                     <li class="job-item grid-item">
-                        <a class="shadow-hover">
-                            <img width="370" src="./image/box-8.jpg" alt="" />
+                        <a class="shadow-hover link" href="">
+                            <img width="370" src="./image/box-8.jpg" alt="Проект LAB" />
                             <div class="job-sites">
                                 <h2 class="job">Проект LAB</h2>
                                 <p class="sites">Маркетинг</p>
@@ -158,8 +158,8 @@
                     </li>
 
                     <li class="job-item grid-item">
-                        <a class="shadow-hover">
-                            <img width="370" src="./image/box-9.jpg" alt="" />
+                        <a class="shadow-hover link" href="">
+                            <img width="370" src="./image/box-9.jpg" alt="Growing Business" />
                             <div class="job-sites">
                                 <h2 class="job">Growing Business</h2>
                                 <p class="sites">Приложение</p>
